Sync dev output for #131

--- a/_output/templates/admin/tckDeveloperTools_log_email_macros.html
+++ b/_output/templates/admin/tckDeveloperTools_log_email_macros.html
@@ -1,8 +1,8 @@
 <xf:macro name="email_list" arg-emails="!">
 	<xf:if is="is_array($emails)">
 		<ul class="listInline listInline--comma listInline--selfInline">
-			<xf:foreach loop="$emails" key="$email" value="$name"><xf:trim>
-				<li>{$name} ({$email})</li>
+			<xf:foreach loop="$emails" value="$email"><xf:trim>
+				<li>{$email|first} ({$email|last})</li>
 			</xf:trim></xf:foreach>
 		</ul>
 	</xf:if>
